--- a/index.html
+++ b/index.html
@@ -10,28 +10,14 @@
         <video autoplay loop muted>
             <source src="video xd.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
-        </video>    
-        <div class="button-container">
-            <button class="btn" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSfrxklWuVmeAj5Wu8vp5nPHEhuRRvFP676i28t5NM-2-mBuFQ/viewform?embedded=true';">Regístrate</button>
-        </div>
-        <video autoplay loop muted>
-            <source src="video xdd.mp4" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
         </video>
+        <div class="overlay">
+            <!-- Iframe de Google Forms incrustado directamente -->
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrxklWuVmeAj5Wu8vp5nPHEhuRRvFP676i28t5NM-2-mBuFQ/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </div>
     </div>
     <div class="mapa">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.5727003903165!2d-73.98447968572153!3d40.74881798417436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25903ce155555%3A0x8ac949d5f7f2f111!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1637698600293!5m2!1sen!2sus"
-        width="100%"
-        height="450"
-        style="border: 0;"
-        allowfullscreen=""
-        loading="lazy">
-      </iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.5727003903165!2d-73.98447968572153!3d40.74881798417436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25903ce155555%3A0x8ac949d5f7f2f111!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1637698600293!5m2!1sen!2sus" width="100%" height="450" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </body>
 </html>
-
-
-
-
